tests/ui/lifetimes/recover-infer-ret-ty-issue-135845.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/recover-infer-ret-ty-issue-135845.rs:5:15
   |
LL | fn b<'a>() -> _ {
   |               ^ not allowed in type signatures
   |
help: replace with the correct return type
   |
LL - fn b<'a>() -> _ {
LL + fn b<'a>() -> i32 {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0121`.
